--- a/C#/excercise1/程序介绍.md
+++ b/C#/excercise1/程序介绍.md
@@ -4,7 +4,7 @@
 
 * 原理  
 
-  在单位面积正方形中抛洒一定数量的点p，其中落在1/4⚪中的数量为inCircle，用概率inCircle/1去模拟Π/4，从而计算Π值。随着取得的点数p越来越多，计算的结果会越来越接近Π的值
+  在单位面积正方形中抛洒一定数量p的点，其中落在1/4⚪中的数量为inCircle，用概率inCircle/p去模拟Π/4，从而计算Π值。随着取得的点数p越来越多，计算的结果会越来越接近Π的值
 
   ~~~c#
   int p = int.Parse(textBox1.Text);
